# shader_playground

./: .gitignore  .gitmodules  CMakeLists.txt  default.frag  default.vert  vertex.data
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  logger.cpp  logger.hpp
src/opengl/: CMakeLists.txt  texture.cpp  texture.hpp  view.cpp  view.hpp
src/ui/: CMakeLists.txt  main_window.cpp  main_window.hpp
